infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: kalinicovic/moderation
---
apiVersion: v1
kind: Service
metadata:
  # this is how they recognize each other
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
# `k apply -f query-depl.yaml `
# `k apply -f .` this will apply to all config files

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: moderation-depl
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: moderation
#   template:
#     metadata:
#       labels:
#         app: moderation
#     spec:
#       containers:
#         - name: moderation
#           image: kalinicovic/moderation
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: moderation-srv
# spec:
#   selector:
#     app: moderation
#   ports:
#     - name: moderation
#       protocol: TCP
#       port: 4003
#       targetPort: 4003
